css/style.css
* {
  box-sizing: border-box;

  scroll-behavior: smooth;
}

.mt-20 {
  margin-top: 20px;
}

.ul-list {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.ul-link {
  text-decoration: none;
  color: black;
  margin: 0;
  padding: 0;
}

.h2-header {
  margin: 40px 0 0 0;
}

.open-sans-default {
  font-family: "Open Sans", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.open-sans-bold {
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.montserrat-default {
  font-family: "Montserrat", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.montserrat-bold {
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.montserrat-medium {
  font-family: "Montserrat", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.wrapper {
  max-width: 1400px;
  margin: 0 auto;
}

.body {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.header {
  display: flex;
  align-items: center;
  width: 100%;
}

.header-left {
  background: linear-gradient(#ffffff, #ccffee);
  padding: 40px 100px 40px 70px;
  width: 40%;
}

.header-right {
  width: 60%;
}

.avatar {
  height: 200px;
  width: 200px;
}

.avatar-img {
  border-radius: 50%;
  width: 100%;
  max-height: 100%;
  object-fit: cover;
  border: 2px solid white;
}

.page-title {
  padding: 50px;
}

.page-title-header {
  margin: 0;
  padding: 0;
  font-size: 45px;
}

.page-title-text {
  margin: 0;
  padding: 0;
  font-size: 25px;
}

.main {
  display: flex;
  width: 100%;
  justify-content: center;
}

.main-left {
  background: linear-gradient(#ccffee, #ffffff);
  width: 40%;
  padding-left: 50px;
  padding-right: 70px;
  color: #333333;
  padding-bottom: 40px;
}

.main-right {
  width: 60%;
  padding: 0 50px;
  padding-bottom: 40px;
}

.contacts-list {
  padding: 0;
  list-style-type: none;
}

.contacts-link {
  text-decoration: none;
  color: #333333;
  margin: 0;
  padding: 0;
}

.contacts-element {
  display: flex;
  align-items: center;
  margin-bottom: 5px;
}

.contacts-icon {
  width: 20px;
  height: 20px;
  margin-right: 5px;
}

.contacts-header {
  margin: 0;
  padding: 0;
}

.about-text {
  padding: 0;
  margin: 20px 0 0 0;
}

.about-header {
  padding: 0;
  margin: 0;
}

.skill-text {
  width: 20%;
  margin: 0;
  padding: 0;
}

.skill-block {
  margin-bottom: 15px;
  display: flex;
  align-items: center;
}

.skill-wrapper {
  list-style-type: none;
  margin: 25px 0;
  padding: 0;
}

.skill-value {
  display: flex;
  align-items: center;
  list-style-type: none;
  padding: 0 0 0 35px;
}

.skill-value-item {
  width: 10px;
  height: 10px;
  background-color: #66ffc2;
  margin-right: 5px;
  margin-top: auto;
  position: relative;
  top: 1px;
}

.gray-value {
  background-color: #bfbfbf;
}

.langs {
  margin: 40px 0 0 0;
}

.langs-list {
  list-style-type: none;
  padding: 0;
  margin: 25px 0;
}

.langs-item {
  display: flex;
  align-items: center;
  margin-bottom: 5px;
}

.langs-item-link {
  color: #333333;
  text-decoration: none;
  position: relative;
  top: 2px;
}

.langs-item-img {
  height: 15px;
  width: 15px;
  margin-right: 5px;
  position: relative;
  top: 1px;
}

.langs-item-header {
  margin: 0;
}

.langs-item-text {
  margin: 0 0 0 10px;
  position: relative;
  top: 2px;
}

.courses-img {
  height: auto;
  max-width: 100%;
}

.courses-header {
  margin: 40 0 0 0;
  padding: 0;
}

.courses-item-header {
  margin: 10px 0;
  padding: 0;
}

.courses-list {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.projects-header {
  padding-bottom: 20px;
}

.project-item {
  font-weight: 600;
}

.code-example-code {
  font-weight: 600;
}

.footer-info {
  padding-top: 20px;
  padding-bottom: 20px;
  background: white;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.footer-text {
  margin: 0;
  padding: 0;
}

.footer-link {
  text-decoration: none;
  color: #333333;
  font-weight: 600;
}

.footer-span {
  font-weight: 600;
}

.footer-img {
  width: 100px;
  height: 100px;
}

